improved waybar/hyprland/screenshots/rofi

--- a/rsc/config/waybar/style.css
+++ b/rsc/config/waybar/style.css
@@ -1,11 +1,12 @@
 * {
   border: none;
   font-family: FiraCode Nerd Font Mono;
-  font-weight: bold;
+  /*font-weight: bold;*/
+  font-size: 12px;
 }
 window#waybar {
-  background-color: #1a1b26;
-  /*background: transparent;*/
+  background-color: rgba(0,0,0,0.5);
+  background: transparent;
   transition-property: background-color;
   transition-duration: .5s;
   border-bottom: none;
@@ -17,6 +18,7 @@ window#waybar.hidden {
 #mode,
 #clock,
 #pulseaudio,
+#custom-sink,
 #network,
 #mpd,
 #memory,
@@ -26,46 +28,25 @@ window#waybar.hidden {
 #disk,
 #battery,
 #tray {
-  background-color: #252734;
-  padding: 0 12px;
-  margin: 4px 4px 4px 4px;
-  border-radius: 90px;
+  color: #999999;
   background-clip: padding-box;
 }
 #workspaces button {
-  padding: 0 5px;
-  color: #7aa2f7;
-  min-width: 20px;
+  padding: 0px 5px;
+  min-width: 5px;
 }
 #workspaces button:hover {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0,0,0,0.2);
 }
-#workspaces button.focused {
-  color: #c678dd;
+/*#workspaces button.focused {*/
+#workspaces button.active {
+  color: #ccffff;
 }
-#workspaces button.urgent {
-  color: #e06c75;
+#workspaces button.visible {
+  color: #ccffff;
 }
-#mode {
-  color: #e06c75;
-}
-#disk {
-  color: #56b6c2;
-}
-#cpu {
-  color: #d19a66;
-}
-#memory {
-  color: #c678dd;
-}
-#clock {
-  color: #7aa2f7;
-}
-#window {
-  color: #9ece6a;
-}
-#battery {
-  color: #9ece6a;
+#workspaces button.hidden {
+  color: #999999;
 }
 #battery.warning {
   color: #ff5d17;
@@ -75,14 +56,4 @@ window#waybar.hidden {
 }
 #battery.charging {
   color: #9ece6a;
-}
-#network {
-  color: #c678dd;
-}
-#pulseaudio {
-  color: #d19a66;
-}
-#pulseaudio.muted {
-  color: #c678dd;
-  background-color: #252734;
 }
