--- a/rsc/config/waybar/style.css
+++ b/rsc/config/waybar/style.css
@@ -3,6 +3,10 @@
   font-family: FiraCode Nerd Font Mono;
   /*font-weight: bold;*/
   font-size: 12px;
+  text-shadow: 0px 0px 5px #000000;
+}
+button:hover {
+  background-color: rgba(80,100,100,0.4);
 }
 window#waybar {
   background-color: rgba(0,0,0,0.5);
@@ -31,16 +35,22 @@ window#waybar.hidden {
   color: #999999;
   background-clip: padding-box;
 }
+#custom-menu {
+  color: #a7c7e7;
+  padding: 0px 5px 0px 5px;
+}
 #workspaces button {
   padding: 0px 5px;
   min-width: 5px;
+  color: rgba(255,255,255,0.8);
 }
 #workspaces button:hover {
   background-color: rgba(0,0,0,0.2);
 }
 /*#workspaces button.focused {*/
 #workspaces button.active {
-  color: #ccffff;
+  color: rgba(255,255,255,0.8);
+  background-color: rgba(80,100,100,0.4);
 }
 #workspaces button.visible {
   color: #ccffff;
