--- a/rsc/config/waybar/style.css
+++ b/rsc/config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
   border: none;
+  border-radius: 0;
   font-family: FiraCode Nerd Font Mono;
-  /*font-weight: bold;*/
   font-size: 12px;
   text-shadow: 0px 0px 5px #000000;
 }
@@ -13,7 +13,8 @@ window#waybar {
   background: transparent;
   transition-property: background-color;
   transition-duration: .5s;
-  border-bottom: none;
+  /*border-bottom: none;*/
+  border-bottom: 1px solid rgba(0, 85, 119, 0.99);
 }
 window#waybar.hidden {
   opacity: 0.2;
@@ -30,40 +31,48 @@ window#waybar.hidden {
 #window,
 #cpu,
 #disk,
+#backlight,
 #battery,
+#custom-mouse,
+#custom-kb,
+#custom-ds4,
 #tray {
   color: #999999;
   background-clip: padding-box;
 }
 #custom-menu {
-  color: #a7c7e7;
+  color: #A7C7E7;
   padding: 0px 5px 0px 5px;
 }
 #workspaces button {
-  padding: 0px 5px;
+  padding: 0px 7px;
   min-width: 5px;
   color: rgba(255,255,255,0.8);
 }
 #workspaces button:hover {
   background-color: rgba(0,0,0,0.2);
 }
+#workspaces button.visible {
+  background-color: rgba(0, 85, 119, 0.3);
+}
 /*#workspaces button.focused {*/
 #workspaces button.active {
   color: rgba(255,255,255,0.8);
-  background-color: rgba(80,100,100,0.4);
-}
-#workspaces button.visible {
-  color: #ccffff;
+  /*background-color: rgba(80,100,100,0.4);*/
+  background-color: rgba(0, 85, 119, 0.99);
 }
 #workspaces button.hidden {
   color: #999999;
 }
 #battery.warning {
   color: #ff5d17;
+  background-color: rgba(0,0,0,0);
 }
 #battery.critical {
   color: #ff200c;
+  background-color: rgba(0,0,0,0);
 }
 #battery.charging {
   color: #9ece6a;
+  background-color: rgba(0,0,0,0);
 }
